--- a/app/src/main/res/layout/summarygroup_item.xml
+++ b/app/src/main/res/layout/summarygroup_item.xml
@@ -22,7 +22,7 @@
   <TextView
       android:id="@+id/summaryItemDataDesc"
       android:layout_width="0dp"
-      android:layout_height="match_parent"
+      android:layout_height="wrap_content"
       android:layout_margin="4dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
@@ -55,9 +55,10 @@
       app:layout_constraintTop_toBottomOf="@+id/summaryItemDataDesc"
       app:layout_constraintVertical_bias="0.0"
       />
+
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline1"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_begin="24dp"
@@ -65,7 +66,7 @@
 
   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guideline2"
-      android:layout_width="wrap_content"
+      android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_percent="0.57"
