update sumarylist item layout

--- a/app/src/main/res/layout/summarylist_item.xml
+++ b/app/src/main/res/layout/summarylist_item.xml
@@ -23,12 +23,11 @@
 
   <TextView
       android:id="@+id/summaryListItemSymbol"
-      android:layout_width="0dp"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginStart="4dp"
       android:layout_marginEnd="2dp"
       android:textStyle="bold"
-      app:layout_constraintEnd_toStartOf="@+id/summaryListItemMarketPrice"
       app:layout_constraintStart_toEndOf="@+id/guideline1"
       app:layout_constraintTop_toTopOf="parent"
       />
@@ -39,7 +38,7 @@
       android:layout_height="wrap_content"
       android:layout_marginStart="2dp"
       android:layout_marginEnd="2dp"
-      android:gravity="end"
+      app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toEndOf="@+id/summaryListItemSymbol"
       app:layout_constraintTop_toTopOf="parent"
@@ -53,8 +52,7 @@
       android:layout_marginEnd="2dp"
       android:textSize="11sp"
       app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="1"
-      app:layout_constraintStart_toEndOf="@+id/guideline1"
+      app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintTop_toBottomOf="@+id/summaryListItemMarketPrice"
       />
   <TextView
