add date to asset input

--- a/app/src/main/res/layout/add_event.xml
+++ b/app/src/main/res/layout/add_event.xml
@@ -90,7 +90,7 @@
       <com.thecloudsite.stockroom.CustomDatePicker
           android:id="@+id/datePickerEventDate"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:datePickerMode="calendar"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
@@ -99,7 +99,7 @@
       <com.thecloudsite.stockroom.CustomTimePicker
           android:id="@+id/datePickerEventTime"
           android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="wrap_content"
           android:timePickerMode="clock"
           app:layout_constraintTop_toBottomOf="@+id/datePickerEventDate"
           />
