--- a/app/src/main/res/layout/stockroomlist_item.xml
+++ b/app/src/main/res/layout/stockroomlist_item.xml
@@ -25,7 +25,7 @@
   <androidx.constraintlayout.widget.ConstraintLayout
       android:id="@+id/item_summary1"
       android:layout_width="0dp"
-      android:layout_height="wrap_content"
+      android:layout_height="match_parent"
       android:paddingStart="4dp"
       android:paddingEnd="4dp"
       android:paddingBottom="4dp"
