--- a/app/src/main/res/layout/remove_asset.xml
+++ b/app/src/main/res/layout/remove_asset.xml
@@ -1,62 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="8dp"
     >
 
-  <LinearLayout
-      android:layout_width="match_parent"
+  <TextView
+      android:id="@+id/removeUpdateSharesHeadline"
+      android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
+      android:layout_gravity="center_horizontal"
+      style="@style/section_header"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
+      android:text="@string/delete_asset"
+      />
+
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:text="@string/number_of_shares"
+      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout1"
+      app:layout_constraintEnd_toStartOf="@+id/guideline1"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textInputLayout1"
+      app:layout_constraintHorizontal_bias="0.0"
+      />
+  <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/textInputLayout1"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline1"
+      app:layout_constraintTop_toBottomOf="@+id/removeUpdateSharesHeadline"
+      app:endIconMode="clear_text"
       >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="8dp"
-        android:textSize="16sp"
-        android:text="@string/delete_asset"
-        />
-
-    <LinearLayout
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/removeShares"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="16dp"
-        android:gravity="center_vertical"
-        android:orientation="horizontal"
-        >
+        android:background="@color/design_default_color_background"
+        android:digits="0123456789.,"
+        android:gravity="end"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
+        android:maxLength="9"
+        android:maxLines="1"
+        android:nextFocusDown="@+id/price"
+        android:nextFocusForward="@+id/price"
+        android:textAlignment="textEnd"
+        />
+  </com.google.android.material.textfield.TextInputLayout>
 
-      <TextView
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:layout_gravity="center_vertical"
-          android:layout_weight="0.4"
-          android:text="@string/number_of_shares"
-          />
+  <TextView
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_gravity="center_vertical"
+      android:text="@string/remove_price"
+      app:layout_constraintBottom_toBottomOf="@+id/textInputLayout2"
+      app:layout_constraintEnd_toStartOf="@+id/guideline1"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="@+id/textInputLayout2"
+      app:layout_constraintHorizontal_bias="0.0"
+      />
+  <com.google.android.material.textfield.TextInputLayout
+      android:id="@+id/textInputLayout2"
+      android:layout_width="0dp"
+      android:layout_height="wrap_content"
+      android:layout_margin="8dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="@+id/guideline1"
+      app:layout_constraintTop_toBottomOf="@+id/textInputLayout1"
+      app:endIconMode="clear_text"
+      >
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/removePrice"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/design_default_color_background"
+        android:digits="0123456789.,"
+        android:gravity="end"
+        android:imeOptions="actionDone"
+        android:inputType="numberDecimal"
+        android:maxLength="9"
+        android:maxLines="1"
+        android:textAlignment="textEnd"
+        />
+  </com.google.android.material.textfield.TextInputLayout>
 
-      <com.google.android.material.textfield.TextInputEditText
-          android:id="@+id/removeShares"
-          android:layout_weight="0.6"
-          android:layout_width="0dp"
-          android:layout_height="wrap_content"
-          android:gravity="end"
-          android:inputType="numberDecimal"
-          android:digits="0123456789.,"
-          android:imeOptions="actionDone"
-          android:maxLength="9"
-          android:maxLines="1"
-          android:textAlignment="textEnd"
-          />
+  <com.thecloudsite.stockroom.CustomDatePicker
+      android:id="@+id/datePickerAssetDate"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:datePickerMode="calendar"
+      app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
+      />
 
-    </LinearLayout>
-
-  </LinearLayout>
+  <androidx.constraintlayout.widget.Guideline
+      android:id="@+id/guideline1"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:orientation="vertical"
+      />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
