--- a/app/src/main/res/layout/dialog_add_group.xml
+++ b/app/src/main/res/layout/dialog_add_group.xml
@@ -7,7 +7,19 @@
     android:padding="8dp"
     >
 
-  <TextView
+  <androidx.core.widget.NestedScrollView
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:scrollbars="vertical"
+      >
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:padding="8dp"
+        >
+
+    <TextView
       android:id="@+id/addUpdateGroupsHeadline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
@@ -103,5 +115,9 @@
       android:layout_height="wrap_content"
       android:orientation="vertical"
       />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+  </androidx.core.widget.NestedScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
