--- a/app/src/main/res/layout/assetview_item.xml
+++ b/app/src/main/res/layout/assetview_item.xml
@@ -40,7 +40,7 @@ limitations under the License. -->
         android:id="@+id/assetSummaryTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="11sp"
+        android:textSize="12sp"
         />
   </LinearLayout>
 
@@ -109,13 +109,13 @@ limitations under the License. -->
         android:id="@+id/textViewAssetDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_action_delete2"
-        android:drawableTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent"
+        app:drawableStartCompat="@drawable/ic_action_delete2"
+        app:drawableTint="@color/colorPrimaryDark"
         />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
