--- a/app/src/main/res/layout/dividend_received_view_item.xml
+++ b/app/src/main/res/layout/dividend_received_view_item.xml
@@ -97,8 +97,8 @@ limitations under the License. -->
         android:id="@+id/textViewDividendReceivedDelete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_action_delete2"
-        android:drawableTint="@color/colorPrimaryDark"
+        app:drawableStartCompat="@drawable/ic_action_delete2"
+        app:drawableTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
