--- a/app/src/main/res/layout/eventview_item.xml
+++ b/app/src/main/res/layout/eventview_item.xml
@@ -84,13 +84,13 @@ limitations under the License. -->
         android:layout_height="wrap_content"
         android:paddingStart="4dp"
         android:paddingEnd="4dp"
-        android:drawableStart="@drawable/ic_action_delete2"
-        android:drawableTint="@color/colorPrimaryDark"
+        app:drawableTint="@color/colorPrimaryDark"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.8"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toTopOf="parent"
+        app:drawableStartCompat="@drawable/ic_action_delete2"
         />
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline1"
