--- a/app/src/main/res/layout/fragment_timeline.xml
+++ b/app/src/main/res/layout/fragment_timeline.xml
@@ -6,7 +6,7 @@
     >
 
   <xyz.sangcomz.stickytimelineview.TimeLineRecyclerView
-      android:id="@+id/recycler_view"
+      android:id="@+id/timeline_recycler_view"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       app:layout_constraintTop_toTopOf="parent"
