--- a/app/src/main/res/layout/dialog_add_event.xml
+++ b/app/src/main/res/layout/dialog_add_event.xml
@@ -104,11 +104,11 @@
           app:layout_constraintTop_toBottomOf="@+id/datePickerEventDate"
           />
 
-      <androidx.constraintlayout.widget.Guideline
+      <androidx.constraintlayout.widget.Barrier
           android:id="@+id/guideline1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:orientation="vertical"
+          app:barrierDirection="start"
           />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
