--- a/app/src/main/res/layout/dialog_add_asset.xml
+++ b/app/src/main/res/layout/dialog_add_asset.xml
@@ -143,11 +143,11 @@
       app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
       />
 
-  <androidx.constraintlayout.widget.Guideline
+  <androidx.constraintlayout.widget.Barrier
       android:id="@+id/guideline1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:orientation="vertical"
+      app:barrierDirection="start"
       />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
