--- a/app/src/main/res/layout/dialog_add_dividend.xml
+++ b/app/src/main/res/layout/dialog_add_dividend.xml
@@ -131,11 +131,11 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewDividendDate"
             />
 
-      <androidx.constraintlayout.widget.Guideline
+      <androidx.constraintlayout.widget.Barrier
           android:id="@+id/guideline1"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:orientation="vertical"
+          app:barrierDirection="start"
           />
 
       </androidx.constraintlayout.widget.ConstraintLayout>
