--- a/app/src/main/res/layout/eventview_item.xml
+++ b/app/src/main/res/layout/eventview_item.xml
@@ -47,7 +47,7 @@ limitations under the License. -->
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/guideline1"
-        app:layout_constraintStart_toStartOf="@+id/textViewEventItemsLayout"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         />
 
