--- a/app/src/main/res/layout/assetview_item.xml
+++ b/app/src/main/res/layout/assetview_item.xml
@@ -69,7 +69,7 @@ limitations under the License. -->
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textViewAssetAmount"
+        android:id="@+id/textViewAssetQuantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="4dp"
