--- a/app/src/main/res/layout/dialog_remove_asset.xml
+++ b/app/src/main/res/layout/dialog_remove_asset.xml
@@ -20,7 +20,7 @@
         >
 
     <TextView
-      android:id="@+id/removeUpdateAmountHeadline"
+      android:id="@+id/removeUpdateQuantityHeadline"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
@@ -49,11 +49,11 @@
       android:layout_margin="8dp"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintStart_toStartOf="@+id/guideline1"
-      app:layout_constraintTop_toBottomOf="@+id/removeUpdateAmountHeadline"
+      app:layout_constraintTop_toBottomOf="@+id/removeUpdateQuantityHeadline"
       app:endIconMode="clear_text"
       >
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/removeAmount"
+        android:id="@+id/removeQuantity"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/design_default_color_background"
