--- a/app/src/main/res/layout/fragment_stockdata.xml
+++ b/app/src/main/res/layout/fragment_stockdata.xml
@@ -33,7 +33,6 @@
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="0.3"
-          android:textSize="24sp"
           style="@style/stock_item_text"
           />
 
@@ -62,7 +61,6 @@
           android:layout_height="wrap_content"
           android:layout_weight="0.7"
           android:textSize="13sp"
-          style="@style/stock_item_text"
           />
 
       <TextView
@@ -72,7 +70,6 @@
           android:layout_weight="0.3"
           android:gravity="end"
           android:textSize="13sp"
-          style="@style/stock_item_text"
           />
 
     </LinearLayout>
@@ -109,11 +106,11 @@
         android:id="@+id/textViewRange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        style="@style/stock_item_text"
+        android:textSize="18sp"
+        android:textColor="@color/black"
         />
 
     <FrameLayout
