--- a/app/src/main/res/layout/stockroomdetaillist_item.xml
+++ b/app/src/main/res/layout/stockroomdetaillist_item.xml
@@ -34,7 +34,7 @@
     <TextView
         android:id="@+id/detaillist_textViewSymbol"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
@@ -53,7 +53,8 @@
     <TextView
         android:id="@+id/detaillist_textViewChange"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="12sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
@@ -62,8 +63,9 @@
   </androidx.constraintlayout.widget.ConstraintLayout>
 
   <androidx.constraintlayout.widget.ConstraintLayout
+      android:id="@+id/detaillist_textViewMarketPriceLayout"
       android:layout_width="0dp"
-      android:layout_height="match_parent"
+      android:layout_height="0dp"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintStart_toEndOf="@+id/guideline3"
       app:layout_constraintEnd_toEndOf="parent"
@@ -72,8 +74,9 @@
     <TextView
         android:id="@+id/detaillist_textViewMarketPrice"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="end"
+        android:textSize="12sp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
