--- a/app/src/main/res/layout/stockroomdetaillist_item.xml
+++ b/app/src/main/res/layout/stockroomdetaillist_item.xml
@@ -35,6 +35,7 @@
         android:id="@+id/detaillist_textViewSymbol"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
@@ -77,6 +78,7 @@
         android:layout_height="wrap_content"
         android:gravity="end"
         android:textSize="12sp"
+        android:layout_marginEnd="2dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toEndOf="parent"
         app:layout_constraintEnd_toStartOf="parent"
